# HeroesJourney

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  appveyor.yml
engine/: CMakeLists.txt  README.md
engine/src/Engine/: Engine.cpp  Engine.hpp  SFMLGraphics.hpp
engine/src/Engine/Asset/: AssetManager.cpp  AssetManager.hpp
engine/src/Engine/ECM/: Component.cpp  ECM.hpp  Entity.cpp  EntityManager.hpp
engine/src/Engine/ECM/BaseComponents/: AnimatorComponent.cpp  AnimatorComponent.hpp  ShapeComponent.cpp  ShapeComponent.hpp  SpriteComponent.cpp  SpriteComponent.hpp  TextComponent.hpp
engine/src/Engine/ECM/Components/: AnimatorComponent.cpp  AnimatorComponent.hpp  ClickableComponent.cpp  ClickableComponent.hpp  ShapeComponent.cpp  ShapeComponent.hpp  SpriteComponent.cpp  SpriteComponent.hpp  TextComponent.cpp  TextComponent.hpp
engine/src/Engine/Entity/: Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp
engine/src/Engine/GUI/: GUIElement.cpp  GUIElement.hpp
engine/src/Engine/Input/: InputManager.cpp  InputManager.hpp
engine/src/Engine/Maths/: Vector2ul.hpp
engine/src/Engine/SM/: State.cpp  State.hpp  StateMachine.cpp  StateMachine.hpp
engine/src/Engine/System/: Animation.cpp  Animation.hpp  Renderer.cpp  Renderer.hpp  Settings.cpp  Settings.hpp
engine/src/Engine/Utils/: FileIO.hpp  Random.hpp
engine/states/: StateMachine.cpp  StateMachine.hpp
res/img/castle_interior/: .backarrow.png-autosave.kra  frame.png~
res/img/encounter/: uiframe.png~
res/img/map/: mountains.png~
res/img/map/encounter_popup/: close_btn.png~  play_btn.png~
res/img/settings/: unselectedset.pdn
src/: Controls.cpp  Controls.hpp  DEFINITIONS.hpp  Damage.cpp  Damage.hpp  Game.cpp  Game.hpp  SkillSet.hpp  main.cpp
src/Components/: BattleHPComponent.cpp  BattleHPComponent.hpp  EncounterCreatorComponent.cpp  EncounterCreatorComponent.hpp  HeuristicEvalComponent.cpp  HeuristicEvalComponent.hpp  SkillComponent.cpp  SkillComponent.hpp  StateMachineComponent.cpp  StateMachineComponent.hpp  StatusComponent.cpp  StatusComponent.hpp
src/Entities/: ActionResolver.cpp  ActionResolver.hpp  AnimatedLogo.cpp  AnimatedLogo.hpp  Bard.cpp  Bard.h  Bard.hpp  Blacksmith.cpp  Blacksmith.hpp  Building.cpp  Building.hpp  Button.cpp  Button.hpp  Dialog.cpp  Dialog.hpp  EncounterPopup.cpp  EncounterPopup.hpp  EvilAI.cpp  EvilAI.hpp  EvilFrostMage.cpp  EvilFrostMage.hpp  GeneralStore.cpp  GeneralStore.hpp  Hero.cpp  Hero.hpp  Infirmary.cpp  Infirmary.hpp  Inn.cpp  Inn.hpp  Knight.cpp  Knight.hpp  Library.cpp  Library.hpp  Rogue.cpp  Rogue.hpp  Sorceress.cpp  Sorceress.hpp
src/Scenes/: BattleOutcomeScene.cpp  BattleOutcomeScene.hpp  CastleInterior.cpp  CastleInterior.hpp  FinalStory.cpp  FinalStory.hpp  MainGameMap.cpp  MainGameMap.hpp  MainMenu.cpp  MainMenu.hpp  MapScene.cpp  MapScene.hpp  MeetBard.cpp  MeetBard.hpp  MeetRogue.cpp  MeetRogue.hpp  MeetSorc.cpp  MeetSorc.hpp  PauseMenu.cpp  PauseMenu.hpp  SettingsScene.cpp  SettingsScene.hpp  Splash.cpp  Splash.hpp  StoryIntro.cpp  StoryIntro.hpp
src/Scenes/Encounters/: BaseEncounter.cpp  BaseEncounter.hpp  CyclopEncounter.cpp  CyclopEncounter.hpp  FinalBossFMEncounter.cpp  FinalBossFMEncounter.hpp  HarpyEncounter.cpp  HarpyEncounter.hpp  IEncounter.cpp  IEncounter.hpp  TrollEncounter.cpp  TrollEncounter.hpp  Tutorial.cpp  Tutorial.hpp
src/States/: AIStates.cpp  AIStates.hpp  ActionStates.cpp  ActionStates.hpp  BaseStates.cpp  BaseStates.hpp  FrostGolemAIStates.cpp  FrostGolemAIStates.hpp  State.hpp
